# ghui

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  data.rs  lib.rs  main.rs  services.rs  utils.rs  view.rs
src/app/: message.rs  model.rs  update.rs
src/data/: models.rs  types.rs
src/icons/: mod.rs
src/services/: cache.rs  circleci.rs  github.rs  search.rs
src/utils/: git.rs
src/view/: components.rs  ui.rs
src/view/components/: popups.rs  search.rs  table.rs  tabs.rs
