[package]
name = "ghui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sea-query = "0.32"
sea-query-rusqlite = "0.7"
dirs = "5.0"
octocrab = "0.41"
tokio = { version = "1", features = ["rt-multi-thread"] }
nucleo-matcher = "0.3"
